# RTF-CPP-2020

./: README.md
Task01042021/: CMakeLists.txt  main.cpp
Task01042021/lib/: CMakeLists.txt  string_with_mv.cpp  string_with_mv.h  string_without_mv.cpp  string_without_mv.h
Task01042021/tests/: CMakeLists.txt  main.cpp  string_with_mv_tests.cpp  string_without_mv_tests.cpp
Task04032021/: CMakeLists.txt  main.cpp
Task04032021/lib/: CMakeLists.txt
Task04032021/lib/exceptions/: CMakeLists.txt  exception.h  logic_exception.h  not_implemented_exception.h
Task04032021/lib/physics/: CMakeLists.txt  area.cpp  area.h  force.cpp  force.h  physical_quantity.cpp  physical_quantity.h  power.cpp  power.h  pressure.cpp  pressure.h
Task10/: MCell.h  MTreeNode.cpp  MTreeNode.h  Maze.cpp
Task15042021/: CMakeLists.txt
Task15042021/TicTacToe.Model/: CMakeLists.txt
Task15042021/TicTacToe.Model/include/: cell.h  field.h  figure.h  game.h
Task15042021/TicTacToe.Model/src/: cell.cpp  game.cpp
Task15042021/TicTacToe.View/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
Task18032021/: CMakeLists.txt
Task18032021/lib/pointers/: CMakeLists.txt  counter.h  shared_pointer.cpp  shared_pointer.h  unique_pointer.cpp  unique_pointer.h
Task18032021/tests/: CMakeLists.txt  example_class.h  main.cpp  shared_pointer_tests.cpp  unique_pointer_tests.cpp
Task210215/: amperage.cpp  amperage.h  area.cpp  area.h  complex.cpp  complex.h  main.cpp  offset.cpp  offset.h  physical_quantity.cpp  physical_quantity.h  position.cpp  position.h  power.cpp  power.h  pressure.cpp  pressure.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h  vector4d.cpp  vector4d.h
Task29042021/: CMakeLists.txt  dot_widget.cpp  dot_widget.h  mainwindow.cpp  mainwindow.ui
Task8/: MCell.h  MTreeNode.cpp  MTreeNode.h  Maze.cpp  Maze.h  Maze.vcxproj  main.cpp  path.h  side.h
Task8-9-10/: MCell.h  MTreeNode.cpp  MTreeNode.h  Maze.cpp  Maze.h  main.cpp
Task9/: MTreeNode.cpp  MTreeNode.h  Maze.cpp
